[tool.poetry]
name = "luna"
version = "0.0.0"
description = "BPL Mock API Server"
authors = ["Bink <bink@bink.bink>"]
readme = "README.md"
repository = "https://github.com/binkhq/luna"

[tool.poetry.dependencies]
python = "^3.10"
falcon = "^3.1.0"
gunicorn = "^20.1.0"
redis = "^4.4.4"
python-dotenv = "^0.21.0"
werkzeug = "^2.3.8"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
mypy = "^0.971"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pylint = "^2.15.3"
xenon = "^0.9.0"
types-redis = "^4.3.21"

[tool.pylint.basic]
extension-pkg-whitelist = "falcon"

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "logging-fstring-interpolation",
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "too-few-public-methods",
    "consider-using-f-string",
    "duplicate-code",                # pylint definition of "duplicate" is way too loose (ex: fastapi route definitions are flagged).
]
good-names = ["k", "v", "i", "q", "fn", "ex", "dt", "tz"]

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
lines_between_types = 1

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.substitution]
files = ['luna/version.py']

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
